Code optimized with color codes

--- a/SimpleBarChart/src/main/res/values/colors.xml
+++ b/SimpleBarChart/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimaryBar">#3AAEB0</color>
+    <color name="colorSecondaryBar">#55585A</color>
+    <color name="colorDottedLine">#6B6B6B</color>
+    <color name="colorTextAmount">#6B6B6B</color>
 </resources>
